syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/0ppliger/open-asset-gateway/api";

service StoreService {
  rpc CreateIPAddress(IPAddressAsset) returns (IPAddressEntity) {}
}

message IPAddressAsset {
  string type = 1;
  string address = 2;
}

message IPAddressEntity {
  string id = 1;
  IPAddressAsset asset = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp last_seen = 4;
}
